--- a/BE/package.json
+++ b/BE/package.json
@@ -14,6 +14,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
