--- a/FE/package.json
+++ b/FE/package.json
@@ -15,10 +15,13 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "debounce": "^2.2.0",
     "dotenv": "^16.4.5",
     "i": "^0.3.7",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.451.0",
     "next": "14.2.13",
     "npm": "^10.9.0",
