--- a/FE/package.json
+++ b/FE/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "debounce": "^2.2.0",
     "dotenv": "^16.4.5",
+    "embla-carousel-react": "^8.3.0",
     "i": "^0.3.7",
     "leaflet": "^1.9.4",
     "lodash.debounce": "^4.0.8",
