--- a/FE/package.json
+++ b/FE/package.json
@@ -42,8 +42,10 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "14.2.13",
+    "@typescript-eslint/eslint-plugin": "^8.9.0",
+    "@typescript-eslint/parser": "^8.9.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.15",
     "eslint-plugin-react": "^7.37.1",
     "globals": "^15.10.0",
     "postcss": "^8",
