--- a/BE/package.json
+++ b/BE/package.json
@@ -12,6 +12,8 @@
   "description": "",
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
@@ -21,13 +23,11 @@
     "express": "^4.21.0",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.0",
+    "mongoose": "^8.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
-    "typescript": "^5.6.2",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.6.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
