--- a/FE/package.json
+++ b/FE/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/geojson": "^7946.0.14",
+    "@types/lodash": "^4.17.12",
     "@types/recharts": "^1.8.29",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
