--- a/FE/package.json
+++ b/FE/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "debounce": "^2.2.0",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.3.0",
