--- a/FE/package.json
+++ b/FE/package.json
@@ -39,6 +39,7 @@
     "next": "14.2.13",
     "npm": "^10.9.0",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
     "recharts": "^2.13.0",
